[metadata]
name = mst
version = 0.1.dev0
description = Tooling to scrape and store MS&T conference data
url = https://github.com/bskinn/mst
license = MIT License
license_file = LICENSE.txt
platforms = any
author = Brian Skinn
author_email = brianskinn@faradaytechnology.com
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Development Status :: 2 - Pre-Alpha

[options]
python_requires = >=3.9
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[mypy]
mypy_path = .

[mypy-bs4.*]
ignore_missing_imports = True

[mypy-opnieuw.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-requests.*]
ignore_missing_imports = True

[mypy-tinydb.*]
ignore_missing_imports = True